# FIESTA-API-Notebooks

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
v0/: MagIC.ipynb
v1/: MagIC API - Private Data.ipynb  MagIC API - Public Data.ipynb  MagIC API - Shared Private Data.ipynb  MagIC.ipynb
